# cerebrum

./: Makefile.am  README.md  configure.ac
script/: check.mk
src/: Makefile.am
src/application/: Makefile.am
src/daemon/: Makefile.am  cerebrum-daemon  daemon-alloc.h  daemon-browser.c  daemon-client.c  daemon-cond.h  daemon-ctx.c  daemon-ctx.h  daemon-group.c  daemon-idle.c  daemon-idle.h  daemon-list.c  daemon-list.h  daemon-loop.c  daemon-loop.h  daemon-main.c  daemon-options.c  daemon-options.h  daemon-ssl.c  daemon.c  daemon.h
src/daemon/avahi/: avahi-client.c  avahi-client.h  avahi-group.c  avahi-group.h  avahi-loop.c  avahi-service.c  avahi-service.h  avahi-timer.c  avahi-timer.h  avahi-watch.c  avahi-watch.h
src/daemon/ssl/: ssl-connection.c  ssl-connection.h  ssl-packet.h  ssl-server.c  ssl-server.h  ssl.h
